--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     	<!-- All REST resources will be prefixed by /api  -->
 	<context-param>
 		<param-name>resteasy.servlet.mapping.prefix</param-name>
-		<param-value>/api</param-value>
+		<param-value>/api/v1</param-value>
 	</context-param>
 
 	<!-- Servlets -->
@@ -16,7 +16,7 @@
 		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>aiss.api.MusicApplication</param-value>
+			<param-value>aiss.api.UserApplication</param-value>
 		</init-param>
 	</servlet>		
 	
